--- a/man/tuned-profiles-openshift.7
+++ b/man/tuned-profiles-openshift.7
@@ -49,17 +49,18 @@ Profile optimized for general workloads on OpenShift worker nodes.
 .BR tuned (8)
 .BR tuned\-adm (8)
 .BR tuned\-profiles (7)
+.BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-sap (7)
 .BR tuned\-profiles\-sap\-hana (7)
-.BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-mssql (7)
-.BR tuned\-profiles\-atomic (7)
+.BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
 .BR tuned\-profiles\-nfv\-host (7)
 .BR tuned\-profiles\-nfv\-guest (7)
 .BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
 .BR tuned\-profiles\-postgresql (7)
+.BR tuned\-profiles\-spectrumscale\-ece (7)
 .SH AUTHOR
 .nf
 Jaroslav Škarvada <jskarvad@redhat.com>
