doc: enable documentation generation on RHEL with asciidoc
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/doc/manual/modules/performance/con_inheritance-between-tuned-profiles.adoc
+++ b/doc/manual/modules/performance/con_inheritance-between-tuned-profiles.adoc
@@ -7,7 +7,7 @@
 
 The `[main]` section of *TuneD* profiles recognizes the [option]`include` option:
 
-[subs=+quotes]
+[subs="quotes"]
 ----
 [main]
 include=[replaceable]_parent_
