plugins: document `med_power_with_dipm` SATA ALPM option The use of `min_power` can lead to data corruption[1] and has been replaced in the documentation, and an example using `medium_power` was updated to use `med_power_with_dipm` (the kernel default[2] with better better power savings than `medium_power`).
[1] https://hansdegoede.livejournal.com/18412.html
[2] https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/drivers/ata/Kconfig?id=5433f0e7427ae4f5b128d89ec16ccaafc9fef5ee

Signed-off-by: Ibrahim Ansari <ansari.ibrahim1@gmail.com>

--- a/doc/manual/modules/performance/con_inheritance-between-tuned-profiles.adoc
+++ b/doc/manual/modules/performance/con_inheritance-between-tuned-profiles.adoc
@@ -22,14 +22,14 @@ If the [replaceable]_parent_ profile is updated, such as after a *TuneD* upgrade
 
 .A power-saving profile based on balanced
 ====
-The following is an example of a custom profile that extends the `balanced` profile and sets Aggressive Link Power Management (ALPM) for all devices to the maximum powersaving.
+The following is an example of a custom profile that extends the `balanced` profile and disables the capability of the CPU to boost above nominal frequencies for brief periods.
 
 ----
 [main]
 include=balanced
 
-[scsi_host]
-alpm=min_power
+[cpu]
+boost=0
 ----
 ====
 
